--- a/styles/index.css
+++ b/styles/index.css
@@ -56,7 +56,12 @@
             }
             
             .right {
-                font-size: 14px;
+                font-size: 20px;
+                padding-left: 2%;
+                padding-top: 2%;
+                padding-right: 2%;
+                padding-bottom: 2%;
+                word-spacing: 3%;
             }
             
             h2 {
@@ -75,40 +80,6 @@
             iframe {
                 padding-left: 15%;
                 padding-right: 10%;
-            }
-            
-            table,
-            td,
-            th {
-                border: 2px mediumaquamarine solid;
-                font-family: Arial, Helvetica, sans-serif;
-            }
-            
-            table {
-                border-collapse: collapse;
-                margin-left: auto;
-                margin-right: auto;
-                width: 80%;
-            }
-            
-            td {
-                text-align: center;
-            }
-            
-            th {
-                background-color: lightgrey;
-            }
-            
-            tr:nth-child(even) {
-                background-color: mintcream;
-            }
-            
-            tr:nth-child(odd) {
-                background-color: lightseagreen;
-            }
-            
-            td:nth-child(2) {
-                text-align: left;
             }
             
             caption {
@@ -169,4 +140,10 @@
             h3 {
                 margin-left: 3%;
                 text-align: center;
+            }
+            
+            #search {
+                padding-left: 10%;
+                padding-right: 10%;
+                padding-top: 7%;
             }
