--- a/styles/index.css
+++ b/styles/index.css
@@ -1,12 +1,18 @@
-            * {
-                padding: 0;
-                margin: 0;
+            body {
+                width: 100%;
+                height: 100vh;
+                background-size: 300% 300%;
+                background-image: linear-gradient( -45deg, rgb(235, 242, 240) 50%, rgb(191, 238, 234) 20%, rgb(102, 197, 181) 70%, rgb(28, 73, 64) 100%);
+                animation: AnimateBG 20s infinite;
             }
             
             h1 {
                 font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
                 color: darkslategray;
                 font-size: 50px;
+                background-color: aliceblue;
+                margin: auto;
+                padding: auto;
             }
             
             .nav {
@@ -71,6 +77,7 @@
                 padding-right: 4%;
                 text-align: center;
                 color: darkslategray;
+                background-color: rgb(159, 212, 202);
             }
             
             #videos {
@@ -78,8 +85,9 @@
             }
             
             iframe {
-                padding-left: 15%;
-                padding-right: 10%;
+                padding-left: 30%;
+                padding-right: 50%;
+                margin: auto;
             }
             
             caption {
