--- a/styles/index.css
+++ b/styles/index.css
@@ -13,6 +13,7 @@
                 background-color: aliceblue;
                 margin: auto;
                 padding: auto;
+                text-align: center;
             }
             
             .nav {
